# GMapsLeadFinder

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ARQUITECTURA_BACKEND_RELATORIO.md  AUDITORIA_PRODUTO_GEOSCOUT_PRO.md  AUDITORIA_SUMARIO_EXECUTIVO.md  Dockerfile  INDEX_PERFORMANCE_FIXES.md  INTEGRACAO_CORRECOES.md  PERFORMANCE_FIXES.md  README.md  RELATORIO_PERFORMANCE.md  RELATORIO_SEGURANCA.md  RESUMO_PERFORMANCE.txt  SECURITY.md  SECURITY_IMPLEMENTATION.md  apply_performance_fixes.py  docker-compose.yml  google-maps-lead-finder-prompt.md  pyproject.toml  render.yaml  requirements.txt
scripts/: check_secrets.py  migrate_to_neon.py
src/: __init__.py  config.py  exceptions.py  main.py
src/api/: __init__.py  google_places.py  models.py  overpass.py  routers.py
src/database/: db.py  migrations.py  models.py  queries.py
src/services/: config_service.py  enricher.py  exporter.py  leads_service.py  notion.py  osm_discovery.py  scheduler.py  scorer.py  search.py  tracker.py
src/utils/: cache.py  helpers.py
src/web/: __init__.py  optimizations.py  security.py  server.py  server.py.backup  validators.py
src/web/templates/: automation.html  automation_logs.html  base.html  discover.html  enrichment.html  export.html  help.html  index.html  lead_detail.html  leads.html  new_businesses.html  notifications.html  pipeline.html  search.html  settings.html  stats.html
src/web/templates/partials/: automation_result.html  discover_preview.html  discover_result.html  enrichment_batch_result.html  enrichment_result.html  error.html  lead_drawer.html  notion_batch_result.html  notion_sync_result.html  search_result.html
tests/: __init__.py  conftest.py  test_api.py  test_database.py  test_scorer.py
tests/bdd/features/: 01_search_leads.feature  02_osm_discovery.feature  03_pipeline_kanban.feature  04_enrichment.feature  05_export.feature  06_notion_sync.feature  07_settings.feature  08_scheduler.feature
tests/bdd/steps/: conftest.py  test_enrichment_steps.py  test_export_steps.py  test_notion_steps.py  test_osm_steps.py  test_pipeline_steps.py  test_scheduler_steps.py  test_search_steps.py  test_settings_steps.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_enrichment.py  test_export.py  test_notion.py  test_osm_discovery.py  test_scheduler.py  test_search_service.py
