[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leadfinder"
version = "1.0.0"
description = "Google Maps Lead Finder - Ferramenta CLI de prospeccao B2B"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Alvaro Ferreira"}
]
keywords = ["leads", "google-maps", "b2b", "prospecting", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

dependencies = [
    "click>=8.1.0",
    "httpx>=0.25.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "rich>=13.0.0",
    "tenacity>=8.2.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
    "detect-secrets>=1.4.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-bdd>=7.0.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.25.0",
    "faker>=20.0.0",
    "factory-boy>=3.3.0",
    "respx>=0.20.0",
]

[project.scripts]
leadfinder = "src.main:cli"
leadfinder-web = "src.web.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Regras de linting:
# E - pycodestyle errors
# F - Pyflakes
# I - isort (ordenacao de imports)
# N - pep8-naming
# W - pycodestyle warnings
# UP - pyupgrade (modernizacao de sintaxe)
# B - bugbear (bugs comuns)
# C4 - flake8-comprehensions
# SIM - flake8-simplify
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
# E501 - line too long (handled by formatter)
# E741 - ambiguous variable name (l, O, I) - too strict
# N801 - class name convention (Migration names with numbers)
# N806 - variable in function should be lowercase (SessionMaker patterns)
# N815 - mixedCase in class scope (Pydantic models mapping to APIs)
# N818 - exception naming (legacy code)
# B904 - raise from (too verbose for FastAPI HTTPException)
# SIM102/103/105/118 - simplifications (optional style)
ignore = ["E501", "E741", "N801", "N806", "N815", "N818", "B904", "SIM102", "SIM103", "SIM105", "SIM118"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false
lines-after-imports = 2

[tool.mypy]
python_version = "3.11"
# Strict mode para maxima seguranca de tipos
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
ignore_missing_imports = true

# Per-module overrides para codigo legado
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
strict = false
